<resources>
    <string name="app_name">Mapper02</string>
    <string name="distractedButton">I WAS DISTRACTED</string>
    <string name="checkInButton">I WANNA CHECK IN</string>
    <string name="dreamButton">Dream Log</string>
    <string name="insideButton">Inside Log</string>
    <string name="outsideButton">Outside Log</string>
    <string name="dream_log">DREAM LOG</string>
    <string name="inside_log">INSIDE LOG</string>
    <string name="outside_log">OUTSIDE LOG</string>
    <string name="backButton">back</string>
    <string name="backButton02">DONE</string>
    <string name="backButton03">BACK</string>
    <string name="backButton04">DONE</string>
    <string name="thoughtThemes">Thought Themes</string>
    <string name="Emotions">Emotions</string>
    <string name="energyLevel">Energy Level</string>
    <string name="backToInsideLog01">DONE</string>
    <string name="backToInsideLog02">DONE</string>
    <string name="backToInsideLog03">DONE</string>
    <string name="energyLevelText">How energetic do you feel?</string>
    <string name="emotionsText">Map your emotions below</string>
    <string name="textview2">Excitement</string>
    <string name="textview3">Joy</string>
    <string name="textview4">Contentment</string>
    <string name="textview5">Surprise</string>
    <string name="textview7">Anger</string>
    <string name="textview8">Sadness</string>
    <string name="textview9">Fear</string>
    <string name="textview10">Disgust</string>
    <string name="keyword01"></string>
    <string name="activityText">What are you doing?</string>
    <string name="locationText">Where are you?</string>
    <string name="peopleText">How many people are around?</string>
    <string name="weatherText">How is the weather?</string>
    <string name="name" />
    <string name="TotalPeople">0</string>
</resources>
